<resources>
    <string name="app_name">KCP WCPS</string>
    <string name="title_sample_list">KCP WCPS</string>

    <!-- Sample List Activity -->
    <string name="bt_na">Bluetooth is not available</string>
    <!--    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth print.</string>
        <string name="not_connected">You are not connected to a device</string>-->
    <string name="connect_fail">Unable to connect device</string>
    <string name="connect_lost">Device connection was lost</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="disconnect">Disconnect</string>
    <string name="notification_error_ssl_cert_invalid">유효하지 않은 사이트 입니다. 계속 진행하시겠습니까?</string>
    <!--   <string name="title_paired_devices">Paired Devices</string>
       <string name="title_other_devices">Other Available Devices</string>
       <string name="button_scan">Scan for devices</string>
       <string name="none_paired">No device have been paired</string>
       <string name="scanning">scanning for devices....</string>
       <string name="select_device">select a device to connect</string>
       <string name="none_found">No device found</string>-->

    <string name="toast_bt_na">bluetooth is not available</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth print.</string>
    <!--
        <string name="secure_connect">Connect a device - Secure</string>
        <string name="insecure_connect">Connect a device - Insecure</string>
    -->
    <string name="title_paired_devices">등록된 기기</string>
    <string name="title_other_devices">사용할 수 있는 기기</string>
    <string name="button_scan">검색</string>
    <string name="none_paired">페어링된 기기가 없습니다.</string>
    <string name="scanning">검색중...</string>
    <string name="select_device">연결할 장치를 선택하세요</string>
    <string name="none_found">장치를 찾을수 없습니다.</string>
    <string name="not_connected">장치에 연결되어 있지 않습니다.</string>
    <string name="warn_timeout">Connection is not available.\nData sending is cancelled.</string>

    <!-- SignPad Activity -->
    <string name="title_sign_pad">SignPad</string>
    <string name="signature">Write Signature</string>
    <string name="print">Print</string>
    <string name="clear">Clear</string>

    <!-- MultiLanguage Activity -->
    <string name="title_multi_language">Multi-Language (RX only)</string>
    <string name="ml_info">For more detailed informations about code table, please refer to ESC t command in Woosim command manual.</string>
    <string name="ml_info2">Korean and/or Chinese sample cannot be printed properly with a printer because of font set limitation.</string>
    <string name="ml_greek">Greek</string>
    <string name="ml_latin9">Latin9</string>
    <string name="ml_russian">Russian</string>
    <string name="ml_hebrew">Hebrew</string>
    <string name="ml_arabic">Arabic</string>
    <string name="ml_hangul">Korean</string>
    <string name="ml_chinese">Chinese(GB18030)</string>

    <!-- PageMode Activity -->
    <string name="title_pagemode">Page Mode Examples</string>
    <string name="pm_info">Page mode printing</string>
    <string name="pm_label">Barcode Label</string>
    <string name="pm_image">Image and Text</string>
</resources>
